--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-10-15 03:21+0300\n"
-"PO-Revision-Date: 2024-10-15 03:22+0300\n"
+"PO-Revision-Date: 2024-10-15 20:31+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -1643,7 +1643,7 @@ msgstr "all"
 #: chat/templates/chat/dialogues.html:61
 msgctxt "chat"
 msgid "государственные"
-msgstr "from states"
+msgstr "presidential"
 
 #: chat/templates/chat/mass_sending/new_sending.html:18
 msgctxt "chat"
