--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-10-20 21:42+0300\n"
-"PO-Revision-Date: 2024-10-20 21:38+0300\n"
+"POT-Creation-Date: 2024-10-20 23:14+0300\n"
+"PO-Revision-Date: 2024-10-20 23:20+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -240,7 +240,13 @@ msgstr "Edit article"
 #: bill/views/bills/speedup_bill.py:162 bill/views/bills/speedup_bill.py:170
 #: gov/views/color_change.py:30 gov/views/color_change.py:44
 #: gov/views/color_change.py:60 gov/views/switch_description.py:24
-#: gov/views/switch_description.py:42 player/views/change_bio.py:34
+#: gov/views/switch_description.py:42
+#: party/views/management/staff/leave_party.py:38
+#: party/views/management/staff/leave_party.py:210 player/player.py:386
+#: player/player.py:397 player/player.py:418 player/views/change_bio.py:34
+#: player/views/change_nickname.py:24 player/views/change_nickname.py:34
+#: player/views/change_nickname.py:42 player/views/change_nickname.py:65
+#: player/views/new_player.py:181 player/views/new_player.py:194
 #: player/views/skills/boost_skill.py:59 player/views/skills/boost_skill.py:72
 #: player/views/skills/boost_skill.py:80 player/views/skills/boost_skill.py:94
 #: player/views/skills/boost_skill.py:104
@@ -261,6 +267,11 @@ msgstr "Edit article"
 #: skill/views/skill_cancel.py:35 skill/views/skill_cancel.py:43
 #: skill/views/skill_cancel.py:51 skill/views/skill_cancel.py:61
 #: skill/views/skill_cancel.py:76 skill/views/skill_cancel.py:100
+#: state/views/set_mandate.py:32 state/views/set_mandate.py:43
+#: state/views/set_mandate.py:56 state/views/set_mandate.py:64
+#: state/views/set_mandate.py:71 state/views/set_mandate.py:80
+#: state/views/state_foundation.py:42 state/views/state_foundation.py:56
+#: state/views/state_foundation.py:70 state/views/state_foundation.py:111
 #: storage/views/auctions/set_bet.py:30 storage/views/auctions/set_bet.py:38
 #: storage/views/auctions/set_bet.py:51 storage/views/auctions/set_bet.py:59
 #: storage/views/auctions/set_bet.py:70 storage/views/auctions/set_bet.py:83
@@ -269,7 +280,7 @@ msgstr "Edit article"
 #: war/views/join_revolution.py:31 war/views/join_revolution.py:54
 #: war/views/join_revolution.py:67 war/views/join_revolution.py:79
 #: war/views/join_revolution.py:91 war/views/join_revolution.py:103
-#: war/views/join_revolution.py:140
+#: war/views/join_revolution.py:140 war/views/start_war.py:104
 msgctxt "core"
 msgid "Закрыть"
 msgstr "Close"
@@ -297,9 +308,11 @@ msgstr "The text of the article should not be empty"
 #: article/views/change_article.py:73 article/views/create_article.py:118
 #: article/views/subscription.py:71 article/views/vote_article.py:73
 #: bill/views/bills/cancel_bill.py:113 bill/views/bills/new_bill.py:77
-#: player/views/change_bio.py:32 player/views/skills/boost_skill.py:166
-#: player/views/skills/up_skill.py:190 skill/views/skill_cancel.py:98
-#: storage/views/auctions/set_bet.py:159
+#: player/views/change_bio.py:32 player/views/change_nickname.py:63
+#: player/views/skills/boost_skill.py:166 player/views/skills/up_skill.py:190
+#: skill/views/skill_cancel.py:98 state/views/set_mandate.py:78
+#: state/views/state_foundation.py:109 storage/views/auctions/set_bet.py:159
+#: war/views/start_war.py:102
 msgctxt "core"
 msgid "Ошибка типа запроса"
 msgstr "Request type error"
@@ -474,17 +487,11 @@ msgid "Новые формы правления государств"
 msgstr "New government forms"
 
 #: bill/models/change_residency.py:32
-#, fuzzy
-#| msgctxt "state_view"
-#| msgid "Свободная"
 msgctxt "change_residency_draft"
 msgid "Свободная"
 msgstr "Free"
 
 #: bill/models/change_residency.py:33
-#, fuzzy
-#| msgctxt "state_view"
-#| msgid "Выдаётся министром"
 msgctxt "change_residency_draft"
 msgid "Выдаётся министром"
 msgstr "Issued by minister"
@@ -1243,12 +1250,12 @@ msgstr "cost"
 #: bill/templates/state/redesign/drafts/start_war.html:8
 msgctxt "start_war_draft"
 msgid "Плацдарм"
-msgstr ""
+msgstr "Bridgehead"
 
 #: bill/templates/state/redesign/drafts/start_war.html:35
 msgctxt "start_war_draft"
 msgid "Цель"
-msgstr ""
+msgstr "Target"
 
 #: bill/templates/state/redesign/drafts/start_war.html:112
 msgctxt "start_war_draft"
@@ -2124,10 +2131,7 @@ msgstr "Error during cancellation"
 #: factory/views/cancel_auto.py:34 factory/views/start_auto.py:33
 #: factory/views/start_auto.py:41 factory/views/start_auto.py:51
 #: factory/views/start_auto.py:80 factory/views/start_auto.py:113
-#: factory/views/start_auto.py:141
-#: party/views/management/staff/leave_party.py:38
-#: party/views/management/staff/leave_party.py:210 player/player.py:386
-#: player/player.py:397 player/player.py:418 region/views/cancel_auto.py:34
+#: factory/views/start_auto.py:141 region/views/cancel_auto.py:34
 #: region/views/daily_status.py:95 region/views/do_mining.py:42
 #: region/views/do_mining.py:55 region/views/do_mining.py:65
 #: region/views/do_mining.py:78 region/views/do_mining.py:87
@@ -2996,8 +3000,7 @@ msgstr "Incorrect color code"
 #: player/views/expense_energy.py:30 player/views/expense_energy.py:44
 #: player/views/expense_energy.py:67 player/views/expense_energy.py:76
 #: player/views/expense_energy.py:87 player/views/full_auto_allow.py:43
-#: player/views/full_auto_allow.py:59 player/views/new_player.py:176
-#: player/views/new_player.py:189 player/views/open_lootboxes.py:27
+#: player/views/full_auto_allow.py:59 player/views/open_lootboxes.py:27
 #: player/views/open_lootboxes.py:38 player/views/open_lootboxes.py:49
 #: player/views/open_lootboxes.py:59 player/views/open_lootboxes.py:134
 #: player/views/set_language.py:40 player/views/set_language.py:56
@@ -4788,6 +4791,27 @@ msgctxt "change_bio"
 msgid "Изменение описания профиля"
 msgstr "Changing the profile description"
 
+#: player/views/change_nickname.py:22
+msgctxt "change_nickname"
+msgid "Недостаточно золота, необходимо: 50"
+msgstr "Not enough gold, required: 50"
+
+#: player/views/change_nickname.py:23 player/views/change_nickname.py:33
+#: player/views/change_nickname.py:41 player/views/change_nickname.py:64
+msgctxt "change_nickname"
+msgid "Смена никнейма"
+msgstr "Nickname changing"
+
+#: player/views/change_nickname.py:32
+msgctxt "change_nickname"
+msgid "Никнейм не может быть пустым"
+msgstr "Nickname cannot be empty"
+
+#: player/views/change_nickname.py:40
+msgctxt "change_nickname"
+msgid "Никнейм не изменился"
+msgstr "Nickname hasn't changed"
+
 #: player/views/change_wiki_hide_allow.py:42
 #: player/views/change_wiki_hide_allow.py:58
 msgid "Скрыть кнопку Wiki"
@@ -4915,7 +4939,7 @@ msgctxt "lists"
 msgid "Мировое население"
 msgstr "World pop"
 
-#: player/views/new_player.py:93
+#: player/views/new_player.py:94
 msgctxt "start_messages"
 msgid ""
 "Добро пожаловать в Wild Politics! Вы всегда можете обратиться ко мне прямо в "
@@ -4926,7 +4950,7 @@ msgstr ""
 "or contact me through the chat in Telegram. I am open to any questions and "
 "wishes."
 
-#: player/views/new_player.py:94
+#: player/views/new_player.py:96
 msgctxt "start_messages"
 msgid ""
 "Если найдётся время, расскажите, пожалуйста, о своих впечатлениях от игры - "
@@ -4935,7 +4959,7 @@ msgstr ""
 "If you have time, please tell me about your impressions of the game - it is "
 "important to me. Enjoy the game!"
 
-#: player/views/new_player.py:115 region/tasks.py:64
+#: player/views/new_player.py:118 region/tasks.py:64
 #, python-format
 msgctxt "start_messages"
 msgid ""
@@ -4946,15 +4970,18 @@ msgstr ""
 "Welcome to the %(state_title)s! This is an automated message generated by "
 "the game. But you can contact me directly by simply replying to it"
 
-#: player/views/new_player.py:174
-msgid ": попробуйте создать персонажа, не загружая изображение"
-msgstr ": try creating a character without loading an image"
+#: player/views/new_player.py:178
+msgctxt "new_player"
+msgid "попробуйте создать персонажа, не загружая изображение"
+msgstr "try creating a character without loading an image"
 
-#: player/views/new_player.py:175 player/views/new_player.py:188
+#: player/views/new_player.py:180 player/views/new_player.py:193
+msgctxt "new_player"
 msgid "Новый персонаж"
 msgstr "New character"
 
-#: player/views/new_player.py:187
+#: player/views/new_player.py:192
+msgctxt "new_player"
 msgid "Ошибка в форме профиля"
 msgstr "Profile form error"
 
@@ -6015,6 +6042,9 @@ msgid "нет парламентских партий"
 msgstr "no parliamentary parties"
 
 #: state/templates/state/redesign/set_mandate.html:46
+#: state/views/set_mandate.py:31 state/views/set_mandate.py:42
+#: state/views/set_mandate.py:55 state/views/set_mandate.py:63
+#: state/views/set_mandate.py:70 state/views/set_mandate.py:79
 #: state/views/set_mandate_view.py:35
 msgctxt "set_mandate"
 msgid "Выдача мандата"
@@ -6131,6 +6161,58 @@ msgstr "Title"
 msgctxt "state_view"
 msgid "Размер"
 msgstr "Size"
+
+#: state/views/set_mandate.py:30
+msgctxt "set_mandate"
+msgid "В партии нет такого кандидата"
+msgstr "There is no such candidate in the party"
+
+#: state/views/set_mandate.py:41
+msgctxt "set_mandate"
+msgid "У кандидата уже есть мандат"
+msgstr "The candidate already has a mandate"
+
+#: state/views/set_mandate.py:54
+msgctxt "set_mandate"
+msgid "Мандат успешно выдан"
+msgstr "The mandate has been successfully issued"
+
+#: state/views/set_mandate.py:62
+msgctxt "set_mandate"
+msgid "Нет свободных мандатов"
+msgstr "There are no free mandates"
+
+#: state/views/set_mandate.py:69
+msgctxt "set_mandate"
+msgid "Вы - не лидер партии"
+msgstr "You are not the party leader"
+
+#: state/views/state_foundation.py:40
+msgctxt "state_foundation"
+msgid "Государство в этом регионе уже есть"
+msgstr "There is already a state in this region"
+
+#: state/views/state_foundation.py:41 state/views/state_foundation.py:55
+#: state/views/state_foundation.py:69 state/views/state_foundation.py:110
+#: war/views/start_war.py:103
+msgctxt "state_foundation"
+msgid "Основание государства"
+msgstr "State foundation"
+
+#: state/views/state_foundation.py:54
+msgctxt "state_foundation"
+msgid "Невозможно создать государство в первые 12 часов после восстания"
+msgstr ""
+"It is impossible to create a state in the first 12 hours after an uprising"
+
+#: state/views/state_foundation.py:68
+msgctxt "state_foundation"
+msgid ""
+"Невозможно создать государство в первые 12 часов после объявления "
+"независимости"
+msgstr ""
+"It is impossible to create a state in the first 12 hours after declaring "
+"independence"
 
 #: storage/migrations/0067_auto_20230715_1635.py:13 storage/models/good.py:25
 #: storage/models/storage.py:30
